test/e2e/conformance/tests/httproute-load-balance.yaml
# Copyright (c) 2022 Alibaba Group Holding Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Test load-balance annotation with the round_robin algorithm
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/load-balance: round_robin
  name: ingress-echo-load-balance-round-robin
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: loadbalance.higress.io
      http:
        paths:
          - path: /round-robin
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
---
# Test load-balance annotation with the least_request algorithm
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/load-balance: least_request
  name: ingress-echo-load-balance-least-request
  namespace: higress-conformance-infra
spec:
  ingressClassName: higress
  rules:
    - host: loadbalance.higress.io
      http:
        paths:
          - path: /least-request
            pathType: Exact
            backend:
              service:
                name: infra-backend-v1
                port:
                  number: 8080
